[package]
name = "apple-security"
version = "2.9.4"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>", "Emanuele Micheletti <micheletti.emanuele@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = "Apple Security Framework bindings for macOS and iOS"
repository = "https://github.com/emanuele-em/apple-security"
documentation = "https://docs.rs/apple_security"
homepage = "https://lib.rs/crates/apple_security"
categories = ["os::macos-apis", "cryptography", "api-bindings"]
readme = "README.md"
keywords = ["iOS", "TLS", "SSL", "crypto", "keychain"]
exclude = ["test/*"]
edition = "2021"
rust-version = "1.60"

[dependencies]
apple-security-sys = { version = "2.9.0", default-features = false, path = "../apple-security-sys" }
core-foundation = "0.9.3"
core-foundation-sys = "0.8.3"
bitflags = "1.3.2"
libc = "0.2.139"
log = { version = "0.4.17", optional = true }
num-bigint = { version = "0.4.3", optional = true }

[dev-dependencies]
hex = "0.4.3"
env_logger = "0.10.0"
x509-parser = "0.15.0"
time = "0.3.17"
tempfile = "3.3.0"

[features]
default = ["OSX_10_9"]
alpn = []
session-tickets = []
job-bless = []
# deprecated, do not use
serial-number-bigint = ["dep:num-bigint"]

OSX_10_9 = ["apple-security-sys/OSX_10_9"]
OSX_10_10 = ["OSX_10_9", "apple-security-sys/OSX_10_10"]
OSX_10_11 = ["OSX_10_10", "apple-security-sys/OSX_10_11"]
OSX_10_12 = ["OSX_10_11", "apple-security-sys/OSX_10_12"]
OSX_10_13 = ["OSX_10_12", "apple-security-sys/OSX_10_13", "alpn", "session-tickets", "serial-number-bigint"]
OSX_10_14 = ["OSX_10_13", "apple-security-sys/OSX_10_14"]
OSX_10_15 = ["OSX_10_14", "apple-security-sys/OSX_10_15"]

nightly = [] # not used, doesn't do anything, only for back compat

[[example]]
name = "client"

[[example]]
name = "find_internet_password"

[[example]]
name = "set_internet_password"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]
