[package]
name = "iostest"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
core-foundation = "0.9.3"
apple-security = { path = "../apple-security" }
apple-security-sys = { path = "../apple-security-sys" }

[dev-dependencies]
rand = "0.8.5"
serial_test = "2.0.0"

[package.metadata.release]
release = false
