[package]
name = "apple-security-sys"
version = "2.9.2"
authors = ["Steven Fackler <sfackler@gmail.com>", "Kornel <kornel@geekhood.net>", "Emanuele Micheletti <micheletti.emanuele@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = "Apple Security Framework low-level FFI bindings"
repository = "https://github.com/emanuele-em/rust-security-framework"
homepage = "https://lib.rs/crates/apple-security-sys"
readme = "README.md"
keywords = ["ffi", "iOS", "TLS", "SSL", "crypto"]
categories = ["os::macos-apis", "external-ffi-bindings"]
edition = "2021"

[dependencies]
core-foundation-sys = "0.8.3"
libc = "0.2.139"

[features]
default = ["OSX_10_9"]
OSX_10_9 = []
OSX_10_10 = ["OSX_10_9"]
OSX_10_11 = ["OSX_10_10"]
OSX_10_12 = ["OSX_10_11"]
OSX_10_13 = ["OSX_10_12"]
OSX_10_14 = ["OSX_10_13"]
OSX_10_15 = ["OSX_10_14"]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-ios"]

[badges]
maintenance = { status = "looking-for-maintainer" }
